--- a/project/build.properties
+++ b/project/build.properties
@@ -1,6 +1,6 @@
-project.organization=org.scala-tools.testing
+project.organization=org.scalasbt.testing
 project.name=test-interface
-sbt.version=0.7.2
-project.version=0.5
+sbt.version=0.7.7
+project.version=0.6-SNAPSHOT
 def.scala.version=2.7.7
 build.scala.versions=2.7.7
